# SCM-Equilibrium

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
docs/: DAMPED_TATONNEMENT_MATH.md  PROJECT_SUMMARY.md  TASK2_EQUILIBRIUM_COMPUTATION.md  THEORY_AUDIT.md
examples/: ccg_analysis_template.py  ccg_soap_market.py  economy_2x2_linear.json  economy_2x2_plc.json  economy_3x3_linear.json  economy_3x3_plc.json  full_demo.py  paper_2x2_reproduction.py  three_piece_plc.py
matlab_reference/: FeigningU.m  FourPlayerMarket.m  README.md  equilibrium.m  fisherm.m  fm.m  forone.m  kkt.m  opti.m  plc.m  plcequilibrium.m  plcm.m  plcmarket.m
scm/: __init__.py  ccg.py  equilibrium.py  equilibrium_plc.py  equilibrium_splc.py  fisher_market.py  fisher_market_plc.py  fisher_market_splc.py  nash.py  production.py  scm_round.py  scm_round_plc.py  scm_round_splc.py  solvers.py  verify.py  visualize.py
tests/: test_ccg.py  test_equilibrium.py  test_equilibrium_plc.py  test_fisher_market.py  test_fisher_market_plc.py  test_many_economies.py  test_nash.py  test_production.py  test_scm_round.py  test_solvers.py  test_task2_methods.py  test_visualize.py
