[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "scm-equilibrium"
version = "0.4.0"
description = "SM equilibrium computation for the Simple Closed Model (Deshpande & Sohoni, 2021)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "cvxpy>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
viz = ["matplotlib>=3.5"]

[tool.setuptools.packages.find]
include = ["scm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
